--- a/Scene3.html
+++ b/Scene3.html
@@ -313,6 +313,17 @@
         opacity: 1;
         transform: translateY(0);
       }
+	  #instruction {
+  position: fixed;
+  bottom: 2em;
+  width: 100%;
+  text-align: center;
+  font-size: 1rem;
+  color: #ffffff;
+  z-index: 10;
+  font-family: Arial, sans-serif;
+}
+
     </style>
   </head>
   <body>
@@ -323,7 +334,8 @@
       <div class="layer-1"></div>
       <div class="layer-2"></div>
       <div class="layer-3"></div>
-    </div>
+    </div>	  
+	<h5 id="instruction">Click the candle to blow it out</h5>
     <div class="black-screen">
       <h1 class="birthday-title">HAPPY BIRTHDAY!</h1>
       <p class="birthday-message">Every year brings its own mix of challenges and little wins — and you’ve handled them with more strength than most ever see. Here’s to a new chapter filled with calm days, loud laughter, and moments that remind you how far you’ve come and how much more there is to enjoy.
