--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
     /* Loading Overlay */
     #loading-overlay {
       position: fixed;
-      top: 0;
       left: 0;
       width: 100%;
       height: 100%;
       background: radial-gradient(circle, #000000 60%, #1a1a1a);
       z-index: 9999;
+      top: 0;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -146,7 +146,7 @@
     </div>
   </div>
 
-  <div id="clock">26 May 2025 12:00 AM</div>
+  <div id="clock">26 May 2025 12:00</div>
   <div id="instructions">
     <div class="arrow">→</div>
     <p>Swipe to rotate Earth</p>
@@ -281,7 +281,8 @@
         day: '2-digit',
         year: 'numeric',
         hour: '2-digit',
-        minute: '2-digit'
+        minute: '2-digit',
+        hour12: false
       };
       clock.textContent = date.toLocaleString('en-US', options).replace(',', '');
     }
